# 1024-vault-program

./: .gitignore  Cargo.toml  README.md  idl.json
scripts/: check_all_admins.js  migrate_vault_config.js  package-lock.json  update_all_admins.js  update_pm_admin.js  update_vault_admin.js
src/: cpi.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  token_compat.rs  utils.rs
tests/: integration_test.rs  spot_token_balance_test.rs
