[package]
name = "vault-program"
version = "1.0.0"
edition = "2021"
description = "1024 DEX Vault Program - Decentralized fund custody and margin management"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.18.26"
borsh = "0.10"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[features]
no-entrypoint = []

