[workspace]

[package]
name = "vault-program"
version = "1.0.0"
edition = "2021"
description = "1024 DEX Vault Program - Decentralized fund custody and margin management"
license = "MIT"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.14.29"
borsh = "0.9"
thiserror = "1.0"
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[features]
no-entrypoint = []

